# NRML-ANN

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  matplotlibrc.yaml  pyproject.toml  test.txt  tox.ini
.github/workflows/: test.yml
ANN-code/: ANN.py  BEAN.py  CoNNCR-R.py  CoNNCR-eval.py  CoNNCR.py  DUNNCE.py  LENRI.py  add_noise.py  analysis.py  bb_event.py  cnn_dataset.py  cnn_processing.py  convert_sim_ims.py  csv_combiner.py  data_methods.py  evaluate_model.py  event.py  event_processor.py  feature_analysis.py  feature_extraction.job  feature_extraction.py  feature_preprocessing.py  hyperparam_tuning.py  image_analysis.py  image_preprocessing.py  matplotlibrc.json  min_dim_Ar_CF4_true.csv  min_dim_CF4_true.csv  miniCoNNCR.py  model.py  models.py  performance.py  script.py  script2.py  smoothing.py  smoothing_analysis.py  test.py  test_model.py  threshold_testing.py  train.py  (+6 more)
ANN-code/features/sizes/: C_heights.pkl  C_widths.pkl  (+2 more)
ANN-code/logs/: cnn_0.err
ANN-code/old-models/: DUNNCE.py  LENRI.py
ANN-code/old_models/: BEAN.py  DUNNCE.py  LENRI.keras  LENRI.py  LENRIv1.keras  LENRIv1_history.pkl
NR-ANN/: feature_extraction.py
feature_extraction/ANN-code/: bb_event.py  data_methods.py  image_analysis.py
feature_extraction/notebooks/: data_integrity.ipynb
feature_extraction/old-ref-code/: event_processor.py
notebooks/: 3d_event_reconstruction.ipynb  data_integrity.ipynb  debug.ipynb  feature_extraction.ipynb  feature_extraction_ITO.ipynb  feature_pipeline.ipynb  feature_viz.ipynb  feature_viz_Ar.ipynb  ito_exploration.ipynb  widgets.py
(+7 files in other folders)
